objects/LAT_ActionPlan__c.object
<CustomObject>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicador</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objetivo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesAcademy__c</fullName>
        <label>Academia de Vendas</label>
        <referenceTo>LAT_SalesAcademy__c</referenceTo>
        <relationshipLabel>Plano de Ação</relationshipLabel>
        <relationshipName>actionPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Plano de Ação</label>
    <nameField>
        <displayFormat>PLA-{000}</displayFormat>
        <label>Plano de Ação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plano de Ação</pluralLabel>
    <recordTypes>
        <fullName>LAT_Distribuicao</fullName>
        <active>true</active>
        <label>Distribuição</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Modern_Trade</fullName>
        <active>true</active>
        <label>Modern Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_On_Trade</fullName>
        <active>true</active>
        <label>On Trade\Eventos</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>